# flask-webapp

./: .gitignore  Makefile  README.md  app.py  forms.py  pyproject.toml  zappa_settings.json
static/css/: style.css
templates/: _formhelpers.html  base.html  edit_items.html  menus.html  orders.html
utils/: application_objects.py  dynamo_functions.py
